# graphics-practice

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: glad.c.866F45432C6E88A8.idx  glad.h.8F1FF987E18765E2.idx  khrplatform.h.1AEAE82B9C02178D.idx  main.cpp.D438F928C5EAAEF5.idx
include/glad/: glad.h
src/: glad.c  main.cpp
